# distributed-key-lab

./: .flake8  LICENSE  README.md  pyproject.toml  setup_check.py
.github/: CODEOWNERS
.github/workflows/: lint-python.yml  unit-tests.yml
distributed-key-lab/src/dkglab/: __init__.py
distributed-key-lab/src/dkglab/secret_sharing/: __init__.py  lagrange.py  recovery.py  splitting.py
distributed-key-lab/src/dkglab/utils/: types.py
distributed-key-lab/src/dkglab/vss/: __init__.py  feldman.py  verification.py
distributed-key-lab/tests/unit/secret_sharing/: test_splitting.py
distributed-key-lab/tests/unit/vss/: test_verification.py
docs/: secret-sharing.md  setup.md  vss-feldman.md
src/dkglab/: __init__.py
src/dkglab/crypto/: __init__.py  curves.py
src/dkglab/protocols/: __init__.py  dkg.py  threshold_signature.py
src/dkglab/secret_sharing/: __init__.py  lagrange.py  recovery.py
src/dkglab/utils/: __init__.py  types.py
src/dkglab/vss/: __init__.py  feldman.py  verification.py
tests/unit/secret_sharing/: test_recovery.py
tests/unit/vss/: test_verification.py
