[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-key-lab"
version = "0.1.0"
description = "DKG + threshold signature educational lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ecdsa>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
