[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-key-lab"
version = "0.1.0"
description = "DKG + threshold signature educational lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ecdsa>=0.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "isort>=5.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    "migrations",
    ".eggs",
    "*.egg-info",
    "*.pyi",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
extend-select = ["B", "D", "I", "S"]
extend-ignore = [
    "E203",
    "D107",
    "C901",
    "S108",
    "S311",
    "D213",
    "D203",
    "D103",
    "D101",
    "D102",
]

[tool.ruff.lint.isort]
known-first-party = ["dkglab"]

[tool.ruff.lint.per-file-ignores]
"setup_check.py" = ["D100"]
"tests/**/*.py" = ["D100", "S101"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["dkglab"]
src_paths = ["."]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*.pyi"]
